force-app/main/default/objects/Candidate_Community__c/Candidate_Community__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>It will have details for Candidate Community settings.</description>
    <label>Talent Rover Candidate Registration</label>
</CustomObject>