force-app/main/default/objects/Candidate_Community__c/fields/Auto_Create_Community_Login__c.field-meta.xml
<CustomField>
    <fullName>Auto_Create_Community_Login__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If Checked, Create a community user and email the credentials</description>
    <label>Auto Create Community Login</label>
    <type>Checkbox</type>
</CustomField>