force-app/main/default/objects/Candidate_Community__c/fields/Consent_On_Quick_Apply__c.field-meta.xml
<CustomField>
    <fullName>Consent_On_Quick_Apply__c</fullName>
    <label>Consent On Quick Apply</label>
    <type>TextArea</type>
</CustomField>