force-app/main/default/objects/Candidate_Community__c/fields/Cookies__c.field-meta.xml
<CustomField>
    <fullName>Cookies__c</fullName>
    <label>Cookies</label>
    <length>100</length>
    <type>Text</type>
</CustomField>