force-app/main/default/objects/Candidate_Community__c/fields/Include_Stages__c.field-meta.xml
<CustomField>
    <fullName>Include_Stages__c</fullName>
    <description>Candidates to be shown belong to these values in status</description>
    <label>Include Stages</label>
    <length>255</length>
    <type>Text</type>
</CustomField>