force-app/main/default/objects/Candidate_Community__c/fields/LogoDocumentId__c.field-meta.xml
<CustomField>
    <fullName>LogoDocumentId__c</fullName>
    <label>LogoDocumentId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>