force-app/main/default/objects/Candidate_Community__c/fields/MarketingCommunication__c.field-meta.xml
<CustomField>
    <fullName>MarketingCommunication__c</fullName>
    <label>MarketingCommunication</label>
    <length>100</length>
    <type>Text</type>
</CustomField>