force-app/main/default/objects/Candidate_Community__c/fields/PrivacyPolicy__c.field-meta.xml
<CustomField>
    <fullName>PrivacyPolicy__c</fullName>
    <label>PrivacyPolicy</label>
    <length>100</length>
    <type>Text</type>
</CustomField>