force-app/main/default/objects/Candidate_Community__c/fields/Profile__c.field-meta.xml
<CustomField>
    <fullName>Profile__c</fullName>
    <label>Profile</label>
    <length>100</length>
    <type>Text</type>
</CustomField>