force-app/main/default/objects/Candidate_Community__c/fields/Required_Consent__c.field-meta.xml
<CustomField>
    <fullName>Required_Consent__c</fullName>
    <label>Required Consent</label>
    <type>TextArea</type>
</CustomField>