force-app/main/default/objects/Candidate_Community__c/fields/Resume_parsing__c.field-meta.xml
<CustomField>
    <fullName>Resume_parsing__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Resume parsing for Registration</description>
    <label>Resume parsing</label>
    <type>Checkbox</type>
</CustomField>