force-app/main/default/objects/Candidate_Community__c/fields/Terms_and_Condition_Url__c.field-meta.xml
<CustomField>
    <fullName>Terms_and_Condition_Url__c</fullName>
    <label>Terms and Condition Url</label>
    <type>Url</type>
</CustomField>