force-app/main/default/objects/Candidate_Community__c/fields/TermsOfUse__c.field-meta.xml
<CustomField>
    <fullName>TermsOfUse__c</fullName>
    <label>TermsOfUse</label>
    <length>100</length>
    <type>Text</type>
</CustomField>