force-app/main/default/objects/Candidate_Community__c/fields/Username_suffix__c.field-meta.xml
<CustomField>
    <fullName>Username_suffix__c</fullName>
    <label>Username suffix</label>
    <length>100</length>
    <type>Text</type>
</CustomField>